--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,11 @@ section{
 .collapsible__title4{
   margin-top: 9px;
 }
-
+.collapsible-body-link {
+  border-bottom: 1px solid #c0c0c0;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
 
 
 
@@ -416,10 +420,17 @@ section{
 .about-text ul li span{ 
   display: block;
 }
-.about-text ul li li {
-  list-style-type: circle;
+
+.about-text .ul-li li{
+  list-style-type: square;
   margin-left: 30px;
 }
+.about-text .ul-li ul li{
+  list-style-type: circle;
+  margin-left: 45px;
+}
+
+
 .about-text ul ul li {
   margin-top: 5px;
 }
