--- a/css/style.css
+++ b/css/style.css
@@ -792,7 +792,18 @@ section.dark .section-title::after{
   flex-wrap: wrap;
 }
 
-.contact-form input, .contact-form textarea{
+.contact-form input{
+  width: 100%;
+  height: 50px;
+  margin: 10px 0;
+  background-color: #353b48;
+  border: none;
+  outline: none;
+  padding: 20px;
+  border-radius: 4px;
+  color: #000;
+}
+.contact-form textarea{
   width: 100%;
   height: 50px;
   margin: 10px 0;
