--- a/style.css
+++ b/style.css
@@ -132,9 +132,9 @@ html{
 /* #home .content h1::after{
   content: "a Developer";
   animation: textanim 10s linear infinite;
-} */
+}
 
-/* @keyframes textanim{
+@keyframes textanim{
   25%{
     content: "a Front-end Developer";
   }
